# EDGAR

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: tox.yaml
edgar_tool/: cli.py  location_autocomplete.py
notebook/: Bellingcat_EDGAR_Tool.ipynb
src/edgar_tool/: constants.py  rss.py  text_search.py  utils.py
tests/: test_cli.py  test_text_search.py  test_url_generator.py
